syntax = "proto3";
package dev.array21.invoicex;

message ProductCreateRequest {
  string orgId = 1;
  string name = 2;
  optional string description = 3;
  optional string productCode = 4;
  float pricePerUnit = 5;
  optional float taxPercentage = 6;
}

message ProductCreateResponse {
  string productId = 1;
}