syntax = "proto3";
package dev.array21.invoicex;

import "entities/product.proto";

message ProductGetResponse {
  Product product = 1;
}